Add merge method in Film entity